# fetch-sys

./: .env.example  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
config/: default.toml
src/: cli.rs  config.rs  lib.rs  main.rs  schema.rs
src/captcha/: mod.rs
src/crawler/: mod.rs
src/extract/: mod.rs
src/factcheck/: mod.rs
src/fetch/: mod.rs
src/human/: mod.rs
src/llm/: mod.rs
src/login/: mod.rs
src/ranking/: mod.rs
src/reader/: mod.rs
src/scroll/: mod.rs
src/search/: mod.rs
src/storage/: mod.rs
tests/: captcha_tests.rs  edge_case_tests.rs  extract_tests.rs  fetch_tests.rs  human_tests.rs  login_tests.rs  ranking_tests.rs  schema_tests.rs  scroll_tests.rs  search_fallback_tests.rs  stress_tests.rs
